--- a/web/index.html
+++ b/web/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/style.css"/>
 </head>
 <body>
+<script src="js/lib/d3.js"></script>
 <script src="js/lib/react.js"></script>
 <script src="js/lib/react-dom.js"></script>
 <script src="js/lib/browser.min.js"></script>
