--- a/web/index.html
+++ b/web/index.html
@@ -10,6 +10,7 @@
 <script src="js/lib/react.js"></script>
 <script src="js/lib/react-dom.js"></script>
 <script src="js/lib/browser.min.js"></script>
+<script src="js/model.js"></script>
 <script type="text/babel" src="js/dashboard.jsx"></script>
 </body>
 </html>
